<resources>
    <string name="app_name">BottomNav</string>

    <!-- ポップアップ -->
    <string name="popup_button_positive">OK</string>
    <string name="popup_button_negative">NG</string>
    <string name="popup_button_neutral">Cancel</string>
    <string name="mail_address_re_input_title">メールアドレス再入力</string>
    <string name="password_re_input_title">パスワード再入力</string>
    <string name="passcode_re_input_title">パスコード再入力</string>
    <string name="re_login_title">再ログイン</string>
    <string name="re_login_message">手続きを進めるために、再ログインをしてください</string>

    <!-- 入力確認 -->
    <string name="length_over">文字以上入力してください</string>
    <string name="length_equal">文字入力してください</string>
    <string name="literal_upper_english">大文字の英字を含めてください</string>
    <string name="literal_lower_english">小文字の英字を含めてください</string>
    <string name="literal_number">数字を含めてください</string>
    <string name="literal_only_number">数字のみ入力してください</string>
    <string name="literal_not_full_width">全角文字は使用できません</string>
    <string name="literal_mail_address">有効なメールアドレスを入力してください</string>

    <!-- Cognito -->
    <string name="cognito_password_illegal">パスワードの形式が異なります</string>
    <string name="cognito_internal_error">時間を置いて再度お試しください</string>
    <string name="login_success_message">ログインが成功しました</string>
    <string name="login_info_not_register">ログイン情報が異なります\n入力を確認してください</string>
    <string name="delete_user_complete">退会が完了しました</string>
    <string name="send_passcode_success">パスコードを送信しました\nメールを確認してください</string>
    <string name="passcode_illegal">パスコードが異なります</string>
    <string name="reset_mail_address_success">メールアドレス再設定に成功しました</string>
    <string name="reset_password_success">パスワード再設定に成功しました</string>
    <string name="register_complete">新規登録が完了しました</string>
    <string name="register_confirm_cancel_title">キャンセル確認</string>
    <string name="register_confirm_cancel_message">会員登録を中止しますか？</string>
    <string name="already_register_mail_address">既に登録されてるメールアドレスです</string>

    <!-- 新規登録画面   -->
    <string name="register_title">新規会員登録</string>
    <string name="register_mail_address_box">メールアドレス</string>
    <string name="register_password_rules_title">パスワードルール</string>
    <string name="register_password_rules">
        ・8文字以上の半角英数字または記号\n
        ・大文字、小文字の英字をそれぞれ1文字以上\n
        ・数字を1文字以上
    </string>
    <string name="register_password_box">パスワード</string>
    <string name="register_return_button">戻る</string>
    <string name="register_register_button">登録</string>
    <string name="register_already_register_text">会員登録済みの方は</string>
    <string name="register_already_register_click">こちら</string>
    <string name="register_user_mail_address_key">REGISTER_USER_EMAIL_ADDRESS</string>
    <string name="register_user_password_key">REGISTER_USER_PASSWORD</string>

    <!-- 新規登録確認画面   -->
    <string name="confirm_register_title">新規会員登録確認</string>
    <string name="confirm_register_passcode">メールに届いたパスコードを入力してください</string>
    <string name="confirm_register_after_mail_send_description">メールを送信しました。\n届いたメールに記載されたパスコードを本アプリに入力し、新規会員登録を完了してください。</string>
    <string name="confirm_register_concern_text">新規会員登録でお困りの場合は</string>
    <string name="confirm_register_concern_click">こちら</string>

    <!-- 性別・年代登録画面   -->
    <string name="tv_screen_name_gender_age">性別・生年月日登録画面</string>
    <string name="tv_gender">あなたの性別を入力してください．</string>
    <string name="rb_male">男性</string>
    <string name="rb_female">女性</string>
    <string name="tv_age">あなたの生年月日を選択してください．</string>
    <string-array name="year">
        <item>-</item>
        <item>2023</item>
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
    </string-array>
    <string name="tv_year">年</string>
    <string-array name="month">
        <item>-</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="tv_month">月</string>
    <string-array name="day">
        <item>-</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="tv_day">日</string>
    <string name="bt_back">戻る</string>
    <string name="bt_register">登録</string>

    <!--    ホーム画面-->
    <string name="advertisement">広告表示エリア(仮)</string>
    <string name="schedule">予定表示エリア(仮)</string>
    <string name="title">ホーム</string>

    <!-- 設定画面   -->
    <string name="setting">設定</string>
    <string name="account">アカウント</string>
    <string name="user_info">ユーザー情報</string>
    <string name="security">セキュリティ</string>
    <string name="connection">外部サイト連携</string>
    <string name="support">サポート</string>
    <string name="info">本アプリについて</string>
    <string name="logout">ログアウト</string>
    <string name="ver">Ver表示</string>

    <!-- 設定_アカウント画面   -->
    <string name="setting_account">アカウント</string>
    <string name="setting_account_register">アカウント登録</string>
    <string name="setting_mail_address_reset">メールアドレス再設定</string>
    <string name="setting_mail_address">メールアドレス取得</string>
    <string name="setting_password_reset">パスワード再設定</string>
    <string name="setting_delete">明日何着るから退会</string>

    <!-- 設定_ユーザー情報画面   -->
    <string name="setting_user_info">ユーザー情報</string>
    <string name="setting_about_user">性別: 男性 or 女性¥n年代: xx年代</string>
    <string name="setting_register_sex_generation">性別・年代登録</string>
    <string name="setting_register_style">体型登録</string>
    <string name="setting_register_preference">好み登録</string>

    <!-- 設定_セキュリティ   -->
    <string name="setting_security">セキュリティ</string>
    <string name="setting_register_location">位置情報登録</string>
    <string name="setting_location_status">設定済み or 未設定</string>

    <!-- 設定_外部サイト連携   -->
    <string name="setting_external_site">外部サイト連携</string>
    <string name="setting_ZOZO">ZOZO</string>
    <string name="setting_ZOZO_status">連携済 or 未連携</string>
    <string name="setting_UNIQLO">UNIQLO</string>
    <string name="setting_UNIQLO_status">連携済 or 未連携</string>

    <!-- 設定_明日何着るについて   -->
    <string name="setting_about_app">明日何着るについて</string>
    <string name="setting_this_app">「明日何着る」とは</string>
    <string name="setting_terms_of_service">利用規約</string>
    <string name="setting_update">アップデート確認</string>

    <!-- ログイン画面   -->
    <string name="login_app_title">明日何着る?</string>
    <string name="login_title">ログイン</string>
    <string name="login_mail">メールアドレス</string>
    <string name="login_password">パスワード</string>
    <string name="login_button">ログイン</string>
    <string name="login_password_forget">パスワードを忘れてしまった方は、</string>
    <string name="login_forget_text">こちら</string>
    <string name="login_register">アカウントをお持ちでない場合、</string>
    <string name="login_register_text">登録はこちら</string>

    <!-- クローゼット画面   -->
    <string name="closet_title">クローゼット</string>
    <string name="closet_tab1">表示</string>
    <string name="closet_tab2">登録</string>
    <string name="closet_tab3">削除</string>
    <string name="closet_search">検索</string>
    <string name="closet_clothes">登録した服表示</string>

    <!-- クローゼット画面登録   -->
    <string name="closet_redo">やり直す</string>
    <string name="closet_register">登録</string>
    <string name="closet_logo">明日何着る？</string>
    <string name="closet_note">以下から選択し、服装を登録してください</string>
    <string name="closet_album">アルバムから追加</string>
    <string name="closet_camera">カメラから追加</string>

    <!-- クローゼット画面削除   -->
    <string name="closet_unselect">選択解除</string>
    <string name="closet_delete">削除</string>

    <!-- カレンダー画面登録   -->
    <string name="calender_title">カレンダー</string>
    <string name="weather">天気表示エリア</string>
    <string name="calender_ad">広告表示エリア</string>
    <string name="calender_merit">連携推奨表示エリア</string>
    <string name="calender_connection">連携する or 連携解除</string>

    <!-- ログイン情報忘れた画面   -->
    <string name="login_forget_title">ログイン情報忘れ(要藤さん作成)</string>

    <!-- ログイン登録画面   -->
    <string name="login_register_title">アカウント新規登録(要藤さん作成)</string>

    <!-- パスワード再設定メール送信画面   -->
    <string name="app_title">明日何着る？</string>
    <string name="reset_password_title">パスワードの再設定</string>
    <string name="mail_address_box">メールアドレス</string>
    <string name="send_button">送信</string>
    <string name="return_button">戻る</string>
    <string name="reset_password_description">上記のメールアドレスにメールが届きます。\n届いたメールに記載されたパスコードを本アプリに入力し、パスワードを再設定してください。</string>
    <string name="reset_password_concern_text">パスワード再設定でお困りの場合は</string>
    <string name="reset_password_concern_click">こちら</string>
    <string name="user_mail_address_key">USER_EMAIL_ADDRESS</string>

    <!-- パスワード再設定画面   -->
    <string name="passcode_box">パスコード(数字6桁)</string>
    <string name="new_password">8~20文字以内(半角英数字・記号)</string>
    <string name="new_password_description_1">新しいパスワードを入力してください</string>
    <string name="new_password_description_2">確認のため再度新しいパスワードを入力してください</string>
    <string name="change_button">変更</string>
    <string name="cancel_button">キャンセル</string>
    <string name="reset_password_after_mail_send_description">メールを送信しました。\n届いたメールに記載されたパスコードを本アプリに入力し、パスワードを再設定してください。</string>
    <string name="reset_password_cancel_message">パスワードの再設定を中断しますか？</string>

    <!-- メールアドレス再設定メール送信画面   -->
    <string name="reset_mail_address_title">メールアドレスの再設定</string>
    <string name="old_mail_address_description">現在のメールアドレス</string>
    <string name="reset_mail_address_description">新しいメールアドレスにメールが届きます。\n届いたメールに記載されたパスコードを本アプリに入力し、メールアドレスを再設定してください。</string>
    <string name="reset_mail_address_concern_text">メールアドレス再設定でお困りの場合は</string>
    <string name="reset_mail_address_concern_click">こちら</string>
    <string name="user_new_mail_address_key">USER_NEW_EMAIL_ADDRESS</string>

    <!-- メールアドレス再設定画面   -->
    <string name="new_mail_address_description">新しいメールアドレス</string>
    <string name="reset_mail_address_after_mail_send_description">メールを送信しました。\n届いたメールに記載されたパスコードを本アプリに入力し、メールアドレスを再設定してください。</string>
    <string name="reset_mail_address_cancel_message">メールアドレスの再設定を中断しますか？</string>

    <!-- カレンダー画面   -->
    <string name="tv_winfo_title">お天気詳細</string>

    <!-- お知らせ画面   -->
    <string name="notification_title">お知らせ</string>

    <!-- 退会画面   -->
    <string name="delete_user_title">退会</string>
    <string name="delete_user_description">
        ・上記のメールアドレスに紐づくアカウントが退会の対象となります\n
        ・退会した場合、保存されているデータは全て削除されます\n
        ・再登録しても、過去のデータは引き継ぐことはできません
    </string>
    <string name="delete_user_agree">同意の上、退会手続きをする</string>
    <string name="delete_user_button">退会する</string>

</resources>