<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">
    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#F5F5F5"
        android:text="@string/setting_account"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/account"/>

    <ImageButton
        android:id="@+id/button"
        android:background="#F5F5F5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/baseline_clear_24"
        android:padding="0dp"
        android:onClick="onClick"/>

    <TextView
        android:id="@+id/account"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_marginTop="100dp"
        android:background="#FFFFFF"
        android:drawableEnd="@drawable/baseline_navigate_next_24"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/setting_account_register"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/account_status"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginTop="100dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:text="@string/setting_account_status"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintEnd_toStartOf="@+id/button" />

    <TextView
        android:id="@+id/mail"
        android:background="#FFFFFF"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:drawableEnd="@drawable/baseline_navigate_next_24"
        android:text="@string/setting_mail_address_reset"
        android:textSize="18sp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account"/>

    <TextView
        android:id="@+id/mail_address"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginRight="40dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:text="@string/setting_mail_address"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/password"
        android:background="#FFFFFF"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:drawableEnd="@drawable/baseline_navigate_next_24"
        android:text="@string/setting_password_reset"
        android:textSize="18sp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail"/>

    <TextView
        android:id="@+id/delete"
        android:background="#FFFFFF"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:drawableEnd="@drawable/baseline_navigate_next_24"
        android:layout_marginTop="100dp"
        android:text="@string/setting_delete"
        android:textSize="18sp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"/>

</androidx.constraintlayout.widget.ConstraintLayout>