<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_style3"
    tools:context=".Closet_delete_Fragment">


    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/closet_title"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/button_style"
        android:gravity="center"
        android:onClick="onButtonClick"
        android:text="@string/closet_tab1"
        android:textColor="#c0c0c0"
        android:textSize="18sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintEnd_toStartOf="@+id/register"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:ignore="TouchTargetSizeCheck"/>

    <Button
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/button_style"
        android:gravity="center"
        android:onClick="onButtonClick"
        android:text="@string/closet_tab2"
        android:textColor="#c0c0c0"
        android:textSize="18sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/display"
        app:layout_constraintEnd_toStartOf="@+id/delete"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:ignore="TouchTargetSizeCheck"/>

    <Button
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/button_style"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:onClick="onButtonClick"
        android:text="@string/closet_tab3"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/register"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/closet"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#FFFFFF"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display"/>

    <Button
        android:id="@+id/button_unselect"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/closet_unselect"
        android:textColor="#000"
        android:textSize="20sp"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closet" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:backgroundTint="#FFFFFF"
        android:textColor="#000"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/closet_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_unselect"
        app:layout_constraintTop_toBottomOf="@+id/closet" />

</androidx.constraintlayout.widget.ConstraintLayout>
