<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/setting_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="330dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/ic_baseline_settings_24"
        android:backgroundTint="#F5F5F5"
        android:onClick="onButtonClick"
        android:padding="0dp"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/schedule"
        android:layout_width="fill_parent"
        android:layout_height="550dp"
        android:background="#FFFF00"
        android:text="@string/schedule"
        android:layout_below="@+id/title"/>

    <TextView
        android:id="@+id/advertisement"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:text="@string/advertisement"
        android:background="#FFFF00"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/schedule"/>
</RelativeLayout>